--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,8 @@
 
 :root{
     --font-poppins: 'Poppins', sans-serif;
-    --background-color: #F2F2F2;
+    --background-page: #F2F2F2;
+    --background-card: #FFFFFF;
     --font-color: #4D4F62;
     --card-red: #EA5454;
     --card-green: #44D3D2;
@@ -11,6 +12,60 @@
 }
 
 body{
-    min-height: 100vh;
-    background-color: var(--background-color);
+    /* min-height: 100vh; */
+    background-color: var(--background-page);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content:center ;
+    font-family: var(--font-poppins);
+}
+.info{
+    width: 83vw;
+    margin-bottom: 4.75rem;
+    margin-top: 80px;
+}
+
+.cards-wrap{
+    width: 83vw;
+    display: grid;
+    row-gap: 1.5rem;
+    margin-bottom: 4.875rem;
+}
+
+.card{
+background-color: var(--background-card);
+box-shadow: 0px 15px 30px -11px rgba(131, 166, 210, 0.5);
+border-radius: 0.5rem;
+display: flex;
+flex-direction: column;
+align-items: center;
+padding: 1.75rem;
+}
+
+.card--supervisor{
+    border-top: 4px solid var(--card-green);
+}
+
+.card--team{
+    border-top: 4px solid var(--card-red);
+
+}
+
+.card--karma{
+    border-top: 4px solid var(--card-yellow);
+}
+
+.card--calculator{
+    border-top: 4px solid var(--card-blue);
+}
+
+.card__image{
+    align-self:flex-end;
+    width: 57px;
+}
+
+.card__text{
+    padding-bottom: 2rem;
 }
