fix: change page background color

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@
 
 :root {
 	--font-poppins: "Poppins", sans-serif;
-	--background-page: #f2f2f2;
+	--background-page: #fafafa;
 	--background-card: #ffffff;
 	--font-color: #4d4f62;
 	--card-red: #ea5454;
